pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints6.pkl
foo: String(isCapitalized) = "hello"

local isCapitalized = (it: String) ->
  let (first = it.take(1).toUpperCase())
    it == "\(first)\(it.drop(1))"
